first fix for orders in chefdashboard using Stream API